added spring mvc etc

--- a/SpringWebApplication/src/main/resources/templates/userform.html
+++ b/SpringWebApplication/src/main/resources/templates/userform.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 
+<div th:insert="fragments/navbar.html :: navbar">
+</div>
+
+<h1>Add User</h1>
+
 <form action="/users/add" method="post">
 
 
