--- a/SpringWebApplication/src/main/resources/templates/showuser.html
+++ b/SpringWebApplication/src/main/resources/templates/showuser.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<div th:insert="fragments/navbar.html :: navbar">
+	</div>
 	<h1>User</h1>
 	
 	<table>
@@ -21,7 +23,7 @@
 		<tr>
 			<th>Active</th><td th:text="${user.active}"></td>
 		</tr>			
-		</tr>
+		
 	</table>
 </body>
 </html>
