--- a/SpringWebApplication/src/main/resources/templates/useradded.html
+++ b/SpringWebApplication/src/main/resources/templates/useradded.html
@@ -6,6 +6,27 @@
 </head>
 <body>
 
+<div th:insert="fragments/navbar.html :: navbar">
+</div>
+
+
 <h1>User Added</h1>
+
+	<table>
+	
+		<tr>
+			<th>ID</th><td th:text="${user.id}"></td>
+		</tr>
+		<tr>
+			<th>Name</th><td th:text="${user.name}"></td>
+		</tr>
+		<tr>
+			<th>Email</th><td th:text="${user.email}"></td>
+		</tr>
+		<tr>
+			<th>Active</th><td th:text="${user.active}"></td>
+		</tr>			
+		
+	</table>
 </body>
 </html>
