--- a/SpringWebApplication/src/main/resources/templates/userdetails.html
+++ b/SpringWebApplication/src/main/resources/templates/userdetails.html
@@ -5,7 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>User Details</h1>
+
+<div th:insert="fragments/navbar.html :: navbar">
+</div>
+
+	<h1 th:text="${title}"></h1>
 	
 	<table>
 	
@@ -21,7 +25,7 @@
 		<tr>
 			<th>Active</th><td th:text="${user.active}"></td>
 		</tr>			
-		</tr>
+		
 	</table>
 </body>
 </html>
