--- a/SpringWebApplication/src/main/resources/templates/userlist.html
+++ b/SpringWebApplication/src/main/resources/templates/userlist.html
@@ -9,21 +9,27 @@
 </head>
 <body>
 
+<div th:insert="fragments/navbar.html :: navbar">
+</div>
+
 <h1>User List</h1>
 
-<table>
-
-	<tr th:each="user: ${users}">
-		
-		<td><a th:href="@{'/users/' + ${user.id}}" th:text="${user.id}"></a></td>
-		
-		<td th:text="${user.name}"></td>
-		<td th:text="${user.email}"></td>
-		<td th:text="${user.active}"></td>
-		
-	</tr>
-
-</table>
+	<form action="/users/confirmdelete" method="get">
+	<table>
+	
+		<tr th:each="user: ${users}">
+			
+			<td><a th:href="@{'/users/' + ${user.id}}" th:text="${user.id}"></a></td>
+			
+			<td th:text="${user.name}"></td>
+			<td th:text="${user.email}"></td>
+			<td th:text="${user.active}"></td>
+			<td><input type="submit" name="id" th:value="${user.id}"></td>
+			
+		</tr>
+	
+	</table>
+	</form>
 
 </body>
 </html>
